# DisplayCluster

./: .gitexternals  .gitignore  .gitsubprojects  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
CMake/: CPackConfig.cmake  DisplayCluster.cmake  FindPackages.cmake  FindRequired.cmake
apps/: CMakeLists.txt
apps/DesktopStreamer/: CMakeLists.txt  Info.plist
apps/DesktopStreamer/src/: MainWindow.cpp  MainWindow.h
apps/DisplayCluster/: Application.cpp  Application.h  BackgroundWidget.cpp  BackgroundWidget.h  CMakeLists.txt  CommandLineParameters.cpp  CommandLineParameters.h  ContentWindowGraphicsItem.cpp  ContentWindowGraphicsItem.h  ContentWindowListWidgetItem.cpp  ContentWindowListWidgetItem.h  ContentWindowTouchArea.cpp  ContentWindowTouchArea.h  DisplayGroupGraphicsScene.cpp  DisplayGroupGraphicsScene.h  DisplayGroupGraphicsView.cpp  DisplayGroupGraphicsView.h  DisplayGroupListWidget.cpp  DisplayGroupListWidget.h  DisplayGroupView.cpp  DisplayGroupView.h  MasterApplication.cpp  MasterApplication.h  MasterWindow.cpp  MasterWindow.h  MultiTouchListener.cpp  MultiTouchListener.h  ProcessForker.cpp  ProcessForker.h  QmlTypeRegistration.cpp  TouchArea.cpp  TouchArea.h  TouchMouseArea.cpp  TouchMouseArea.h  WallApplication.cpp  WallApplication.h  WebbrowserWidget.cpp  WebbrowserWidget.h  displaycluster.py  main.cpp  (+1 more)
apps/DisplayCluster/resources/: ContentWindow.qml  ContentWindowButton.qml  DisplayGroupBackground.qml  MasterContentWindow.qml  MasterDisplayGroup.qml  TouchBorderRectangle.qml  TouchWindowBorders.qml  displaycluster.qrc
apps/LocalStreamer/: Application.cpp  CMakeLists.txt  main.cpp
apps/LocalStreamer/src/: Application.cpp  Application.h
apps/PyramidMaker/: CMakeLists.txt  main.cpp
apps/SimpleStreamer/: CMakeLists.txt
apps/SimpleStreamer/src/: main.cpp
dc/: CMakeLists.txt
dc/core/: BasicSynchronizer.cpp  BasicSynchronizer.h  CMakeLists.txt  CachedDataSource.cpp  CachedDataSource.h  Content.cpp  Content.h  ContentAction.cpp  ContentAction.h  ContentActionsModel.cpp  ContentActionsModel.h  ContentFactory.cpp  ContentFactory.h  ContentInteractionDelegate.cpp  ContentInteractionDelegate.h  ContentItem.cpp  ContentItem.h  ContentLoader.cpp  ContentSynchronizer.cpp  ContentSynchronizer.h  ContentWindow.cpp  ContentWindow.h  ContentWindowController.cpp  ContentWindowController.h  Coordinates.h  DataLoader.cpp  DataLoader.h  DataProvider.cpp  DataProvider.h  DataSource.h  DisplayGroup.cpp  DisplayGroup.h  DisplayGroupController.cpp  DisplayGroupController.h  DisplayGroupRenderer.cpp  DisplayGroupRenderer.h  Drawable.h  DynamicTexture.cpp  DynamicTexture.h  DynamicTextureContent.cpp  (+189 more)
dc/core/configuration/: Configuration.cpp  MasterConfiguration.cpp  MasterConfiguration.h  WallConfiguration.cpp  WallConfiguration.h
dc/core/gestures/: DoubleTapGestureRecognizer.cpp  PanGesture.h  PanGestureRecognizer.cpp  PanGestureRecognizer.h  PinchGesture.cpp  PinchGesture.h  PinchGestureRecognizer.cpp
dc/core/localstreamer/: AsyncImageLoader.cpp  (+13 more)
dc/webservice/: CMakeLists.txt
doc/: CMakeLists.txt  Documentation.md  Introduction.md  RelNotes.md  UserGuide.md
examples/: configuration.xml  configuration_basic.xml  configuration_stallion.xml  configuration_test.xml  pong.py
python/: ContentWindowManager.sip  DisplayGroupPython.sip  pyapp.sip
src/: CMakeLists.txt  Event.h  MessageHeader.h  PixelStreamSegment.h  PixelStreamSegmentParameters.h
src/core/: CMakeLists.txt  CommandType.cpp  Content.cpp  Content.h  ContentAction.cpp  ContentAction.h  ContentActionsModel.cpp  ContentActionsModel.h  ContentFactory.cpp  ContentInteractionDelegate.cpp  ContentInteractionDelegate.h  ContentItem.cpp  ContentItem.h  ContentLoader.cpp  ContentLoader.h  ContentWindow.cpp  ContentWindow.h  ContentWindowController.cpp  ContentWindowController.h  ContentWindowGraphicsItem.cpp  ContentWindowGraphicsItem.h  ContentWindowInterface.cpp  ContentWindowInterface.h  ContentWindowListWidgetItem.cpp  ContentWindowListWidgetItem.h  ContentWindowManager.cpp  ContentWindowManager.h  ContentWindowRenderer.cpp  ContentWindowRenderer.h  Coordinates.cpp  Coordinates.h  DisplayGroup.cpp  DisplayGroup.h  DisplayGroupGraphicsScene.cpp  DisplayGroupGraphicsScene.h  DisplayGroupGraphicsView.cpp  DisplayGroupGraphicsView.h  DisplayGroupGraphicsViewProxy.cpp  DisplayGroupGraphicsViewProxy.h  DisplayGroupInterface.cpp  (+151 more)
src/core/configuration/: Configuration.cpp  Configuration.h  MasterConfiguration.cpp  MasterConfiguration.h  WallConfiguration.cpp  WallConfiguration.h
src/core/gestures/: DoubleTapGesture.h  DoubleTapGestureRecognizer.cpp  PanGesture.h  PanGestureRecognizer.cpp  PinchGesture.h  PinchGestureRecognizer.cpp  PinchGestureRecognizer.h
src/core/localstreamer/: DockPixelStreamer.cpp  DockPixelStreamer.h  PixelStreamer.h  PixelStreamerLauncher.cpp  PixelStreamerLauncher.h  WebkitHtmlSelectReplacer.h  WebkitPixelStreamer.cpp  WebkitPixelStreamer.h
src/core/resources/: BaseContentWindow.qml  BorderRectangle.qml  ContentWindow.qml  ControlButton.qml  OneToOneControlButton.qml  PixelStream.qml  WallContentWindow.qml  WindowBorders.qml  WindowControls.qml  WindowControlsDelegate.qml  ZoomContext.qml  core.qrc  style.js
src/core/resources/qml/: WallContentWindow.qml
src/core/thumbnail/: PDFThumbnailGenerator.cpp  PyramidThumbnailGenerator.cpp
src/core/ws/: DisplayGroupAdapter.cpp  DisplayGroupAdapter.h  TextInputDispatcher.cpp  TextInputDispatcher.h  TextInputHandler.cpp  TextInputHandler.h  WebServiceServer.h
src/dcWebservice/: CMakeLists.txt  FastCGIWrapper.h
src/dcstream/: CMakeLists.txt  ImageSegmenter.cpp  ImageSegmenter.h  ImageWrapper.h  Socket.cpp  Socket.h  Stream.cpp  Stream.h  StreamPrivate.cpp  StreamPrivate.h
tests/: CMakeLists.txt  GlobalQtApp.h  webbrowser.cpp
tests/cpp/: CMakeLists.txt
tests/mock/: CMakeLists.txt  GlobalQtApp.h  MockNetworkListener.h  MockTextInputDispatcher.cpp  MockTouchEvents.h  glVersion.h
tests/perf/: CMakeLists.txt  dcBenchmarkMPI.cpp  dcBenchmarkStreamer.cpp  dcStreamTests.cpp
tests/resources/: CMakeLists.txt  configuration.xml
(+66 files in other folders)
